--- a/themes/cactus/layout/post.ejs
+++ b/themes/cactus/layout/post.ejs
@@ -3,16 +3,15 @@
     <%- partial('_partial/post/title', { post: page, index: false, class_name: 'posttitle' }) %>
     <div class="meta">
       <span class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name"><% if (page.author) { %><%- page.author %><% } else { %><%- config.title %><% } %></span>
+        <span itemprop="name"
+          ><% if (config.author) { %><%- config.author %><% } else { %><%- config.title %><% } %></span
+        >
       </span>
-      <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
-      <%- partial('_partial/post/category') %>
-      <%- partial('_partial/post/tag') %>
+      <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %> <%- partial('_partial/post/category')
+      %> <%- partial('_partial/post/tag') %>
     </div>
   </header>
   <%- partial('_partial/post/gallery') %>
-  <div class="content" itemprop="articleBody">
-    <%- page.content %>
-  </div>
+  <div class="content" itemprop="articleBody"><%- page.content %></div>
 </article>
 <%- partial('_partial/comments') %>
